WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152200
Mousewheel events don't work in iframes in RTL documents
https://bugs.webkit.org/show_bug.cgi?id=152200
Summary
Mousewheel events don't work in iframes in RTL documents
Simon Fraser (smfr)
Reported
2015-12-11 16:09:34 PST
Mousewheel events don't work in iframes in RTL documents
Attachments
Patch
(6.18 KB, patch)
2015-12-11 16:11 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-12-11 16:11:12 PST
Created
attachment 267199
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2015-12-11 16:11:45 PST
<
rdar://problem/23868169
>
WebKit Commit Bot
Comment 3
2015-12-11 22:58:38 PST
Comment on
attachment 267199
[details]
Patch Clearing flags on attachment: 267199 Committed
r194004
: <
http://trac.webkit.org/changeset/194004
>
WebKit Commit Bot
Comment 4
2015-12-11 22:58:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug