Mousewheel events don't work in iframes in RTL documents https://bugs.webkit.org/show_bug.cgi?id=152200

Reviewed by Beth Dakin.

Source/WebCore:

When dispatching wheel events, the testing of the event point against the
non-fast scrollable region was broken in an RTL document. Fix by taking
the scrollOrigin into account in ScrollingTreeFrameScrollingNode::viewToContentsOffset().

Test: fast/scrolling/rtl-point-in-iframe.html

* page/scrolling/ScrollingTreeFrameScrollingNode.cpp:
(WebCore::ScrollingTreeFrameScrollingNode::viewToContentsOffset):

LayoutTests:

Try dispatching wheel events to an iframe in an RTL document.

* fast/scrolling/rtl-point-in-iframe-expected.txt: Added.
* fast/scrolling/rtl-point-in-iframe.html: Added.


Canonical link: https://commits.webkit.org/170330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194004 268f45cc-cd09-0410-ab3c-d52691b4dbfc