Source/WebCore/page/scrolling/ScrollingTreeFrameScrollingNode.cpp
@@ -91,7 +91,7 @@ void ScrollingTreeFrameScrollingNode::setScrollPosition(const FloatPoint& scroll
 
 FloatSize ScrollingTreeFrameScrollingNode::viewToContentsOffset(const FloatPoint& scrollOffset) const
 {
-    return toFloatSize(scrollOffset) - FloatSize(0, headerHeight() + topContentInset());
+    return toFloatSize(scrollOffset) - toFloatSize(scrollOrigin()) - FloatSize(0, headerHeight() + topContentInset());
 }
 
 } // namespace WebCore
